--- a/native/data/projectInfo.json
+++ b/native/data/projectInfo.json
@@ -4,7 +4,7 @@
         {
             "title":"fxp-plugin-video",
             "link":"https://github.com/fangxiaopeng/fxp-plugin-video",
-            "desc":"一款基于海康威视视频SDK二次开发的Cordova插件，支持Android和IOS两个平台。功能如下：1，播放单路视频（支持指定通道）；2，播放单路/多路视频（自动适配单路/多路）；该插件已发布到npm。"
+            "desc":"一款基于海康威视视频SDK的Cordova插件，用于播放海康监控视频，支持Android和IOS两个平台。功能如下：1，播放单路视频（支持指定通道）；2，播放单路/多路视频（自动适配单路/多路）；该插件已发布到npm。"
         },
         {
             "title":"multi-expandable-list",
@@ -14,7 +14,7 @@
         {
             "title":"Personal Home Page",
             "link":"https://github.com/fangxiaopeng/fangxiaopeng.github.io",
-            "desc":"开源Github个人主页，分为三个版本：native版（原生）、Vue版 、BootStrap版。麻雀虽小五脏俱全，适合新手学习使用。原生版本已使用三种不同方式实现，其他版本迭代开发中，敬请期待！"
+            "desc":"开源Github个人主页，分为四个版本：native版（原生）、Vue版 、hexo版、hugo版。麻雀虽小五脏俱全，适合新手学习使用。原生版本已使用三种不同方式实现，Vue版本迭代开发中，敬请期待！"
         },
         {
             "title":"AndroidAndJs",
